cambios en formulario ingreso y la clase program, para que el formlario de ingreso este de inicio

--- a/EVALUA3CINTIADIAZ/ProyRestMatrizArray/ProyRestMatrizArray.csproj
+++ b/EVALUA3CINTIADIAZ/ProyRestMatrizArray/ProyRestMatrizArray.csproj
@@ -183,6 +183,8 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <DependentUpon>BDDPROG2CINTIADIAZ.mdf</DependentUpon>
     </Content>
+    <None Include="Resources\logo instituto 2.png" />
+    <None Include="Resources\integrantes grupo.png" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.6.1">
