--- a/EVALUA3CINTIADIAZ/ProyRestMatrizArray/ProyRestMatrizArray.csproj
+++ b/EVALUA3CINTIADIAZ/ProyRestMatrizArray/ProyRestMatrizArray.csproj
@@ -183,6 +183,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <DependentUpon>BDDPROG2CINTIADIAZ.mdf</DependentUpon>
     </Content>
+    <None Include="Resources\profe luis.png" />
     <None Include="Resources\logo instituto 2.png" />
     <None Include="Resources\integrantes grupo.png" />
   </ItemGroup>
